--- a/Data Visualization/Seaborn.ipynb
+++ b/Data Visualization/Seaborn.ipynb
@@ -106,7 +106,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -152,7 +153,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -203,7 +205,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -254,7 +257,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -296,7 +300,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -329,7 +334,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -345,7 +351,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -371,7 +378,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -409,7 +417,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -447,7 +456,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -485,7 +495,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -709,7 +720,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -735,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "32884044-cf9e-4cee-9cf6-732763f29721",
+   "id": "763d91bc-9b6f-4a65-8fc6-9201098b63f1",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -745,7 +757,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create a histogram plot to visualize the  number of race/ethnicity from data StudentsPerformance.sv"
+    "# Create a histogram plot to visualize the  number of race/ethnicity from data StudentsPerformance.csv "
    ]
   }
  ],
